ACalc: Switched or of X and / and fixed bottom alignment.

--- a/apps/acalc/style.css
+++ b/apps/acalc/style.css
@@ -138,5 +138,6 @@ body {
 }
 
 .keypad {
+  height: 672px;
   margin-bottom: -4px;
 }
